Cleaned up some of the messaging code, please dont use @Inject on private members, only on Constructors.
git-svn-id: https://source.sakaiproject.org/contrib/k2/trunk@58351 fdecad78-55fc-0310-b1b2-d7d25cf747c9